// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`different notification types renders correctly | Care request 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": "#ECEEF2",
      "borderBottomWidth": 1,
      "opacity": 1,
      "paddingVertical": 15,
    }
  }
  testID="notificationButton"
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "maxWidth": 350,
        "paddingHorizontal": 20,
      }
    }
  >
    <Image
      resizeMode="cover"
      source={
        Object {
          "uri": "recusandae alias consequuntur",
        }
      }
      style={
        Array [
          Object {
            "borderRadius": 24,
            "height": 48,
            "width": 48,
          },
          Object {
            "backgroundColor": "rgb(115, 115, 152)",
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Object {
          "left": 50,
          "position": "absolute",
          "top": 30,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 18,
              "flexDirection": "row",
              "height": 36,
              "justifyContent": "space-between",
              "paddingHorizontal": 20,
              "paddingVertical": 10,
            },
            Object {
              "backgroundColor": "#FD726D",
            },
            Object {
              "width": 20,
            },
            Object {
              "alignItems": "center",
              "borderRadius": 12,
              "height": 24,
              "justifyContent": "center",
              "paddingHorizontal": 5,
              "paddingVertical": 5,
              "width": 24,
            },
          ]
        }
        testID="HELP_REQUESTLabel"
      >
        <SvgMock
          color="#ffffff"
          height={15}
          style={
            Array [
              Object {
                "marginLeft": 0,
                "marginRight": 0,
              },
              undefined,
            ]
          }
          width={15}
        />
      </View>
    </View>
    <View
      style={
        Object {
          "paddingHorizontal": 20,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#505256",
              "fontSize": 16,
              "lineHeight": 20,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "fontWeight": "600",
              },
            ]
          }
        >
          Christian Huffman
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {},
            ]
          }
        >
           posted a new 
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {},
            ]
          }
        >
          care request
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {},
            ]
          }
        >
           in 
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "fontWeight": "600",
              },
            ]
          }
        >
          Bleh 2.0
        </Text>
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#B4B6BA",
              "fontSize": 12,
              "lineHeight": 16,
            },
          ]
        }
        testID="Text"
      >
        November 13, 2015 8:52 PM
      </Text>
    </View>
  </View>
</View>
`;

exports[`different notification types renders correctly | Comment 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": "#ECEEF2",
      "borderBottomWidth": 1,
      "opacity": 1,
      "paddingVertical": 15,
    }
  }
  testID="notificationButton"
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "maxWidth": 350,
        "paddingHorizontal": 20,
      }
    }
  >
    <Image
      resizeMode="cover"
      source={
        Object {
          "uri": "recusandae alias consequuntur",
        }
      }
      style={
        Array [
          Object {
            "borderRadius": 24,
            "height": 48,
            "width": 48,
          },
          Object {
            "backgroundColor": "rgb(115, 115, 152)",
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Object {
          "left": 50,
          "position": "absolute",
          "top": 30,
        }
      }
    >
      <SvgMock />
    </View>
    <View
      style={
        Object {
          "paddingHorizontal": 20,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#505256",
              "fontSize": 16,
              "lineHeight": 20,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {},
            ]
          }
        >
          There's a new comment in a step of faith 
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "fontWeight": "600",
              },
            ]
          }
        >
          Christian
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {},
            ]
          }
        >
           took! Go see what God did.
        </Text>
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#B4B6BA",
              "fontSize": 12,
              "lineHeight": 16,
            },
          ]
        }
        testID="Text"
      >
        November 13, 2015 8:52 PM
      </Text>
    </View>
  </View>
</View>
`;

exports[`different notification types renders correctly | Community Challenge 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": "#ECEEF2",
      "borderBottomWidth": 1,
      "opacity": 1,
      "paddingVertical": 15,
    }
  }
  testID="notificationButton"
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "maxWidth": 350,
        "paddingHorizontal": 20,
      }
    }
  >
    <Image
      resizeMode="cover"
      source={
        Object {
          "uri": "recusandae alias consequuntur",
        }
      }
      style={
        Array [
          Object {
            "borderRadius": 24,
            "height": 48,
            "width": 48,
          },
          Object {
            "backgroundColor": "rgb(115, 115, 152)",
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Object {
          "left": 50,
          "position": "absolute",
          "top": 30,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 18,
              "flexDirection": "row",
              "height": 36,
              "justifyContent": "space-between",
              "paddingHorizontal": 20,
              "paddingVertical": 10,
            },
            Object {
              "backgroundColor": "#00CA99",
            },
            Object {
              "width": 20,
            },
            Object {
              "alignItems": "center",
              "borderRadius": 12,
              "height": 24,
              "justifyContent": "center",
              "paddingHorizontal": 5,
              "paddingVertical": 5,
              "width": 24,
            },
          ]
        }
        testID="COMMUNITY_CHALLENGELabel"
      >
        <SvgMock
          color="#ffffff"
          height={15}
          style={
            Array [
              Object {
                "marginLeft": 0,
                "marginRight": 0,
              },
              undefined,
            ]
          }
          width={15}
        />
      </View>
    </View>
    <View
      style={
        Object {
          "paddingHorizontal": 20,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#505256",
              "fontSize": 16,
              "lineHeight": 20,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {},
            ]
          }
        >
          You have a new Challenge in 
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "fontWeight": "600",
              },
            ]
          }
        >
          Bleh 2.0
        </Text>
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#B4B6BA",
              "fontSize": 12,
              "lineHeight": 16,
            },
          ]
        }
        testID="Text"
      >
        November 13, 2015 8:52 PM
      </Text>
    </View>
  </View>
</View>
`;

exports[`different notification types renders correctly | God Story 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": "#ECEEF2",
      "borderBottomWidth": 1,
      "opacity": 1,
      "paddingVertical": 15,
    }
  }
  testID="notificationButton"
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "maxWidth": 350,
        "paddingHorizontal": 20,
      }
    }
  >
    <Image
      resizeMode="cover"
      source={
        Object {
          "uri": "recusandae alias consequuntur",
        }
      }
      style={
        Array [
          Object {
            "borderRadius": 24,
            "height": 48,
            "width": 48,
          },
          Object {
            "backgroundColor": "rgb(115, 115, 152)",
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Object {
          "left": 50,
          "position": "absolute",
          "top": 30,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 18,
              "flexDirection": "row",
              "height": 36,
              "justifyContent": "space-between",
              "paddingHorizontal": 20,
              "paddingVertical": 10,
            },
            Object {
              "backgroundColor": "#7076B5",
            },
            Object {
              "width": 20,
            },
            Object {
              "alignItems": "center",
              "borderRadius": 12,
              "height": 24,
              "justifyContent": "center",
              "paddingHorizontal": 5,
              "paddingVertical": 5,
              "width": 24,
            },
          ]
        }
        testID="STORYLabel"
      >
        <SvgMock
          color="#ffffff"
          height={15}
          style={
            Array [
              Object {
                "marginLeft": 0,
                "marginRight": 0,
              },
              undefined,
            ]
          }
          width={15}
        />
      </View>
    </View>
    <View
      style={
        Object {
          "paddingHorizontal": 20,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#505256",
              "fontSize": 16,
              "lineHeight": 20,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "fontWeight": "600",
              },
            ]
          }
        >
          Christian Huffman
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {},
            ]
          }
        >
           posted a new 
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {},
            ]
          }
        >
          god story
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {},
            ]
          }
        >
           in 
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "fontWeight": "600",
              },
            ]
          }
        >
          Bleh 2.0
        </Text>
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#B4B6BA",
              "fontSize": 12,
              "lineHeight": 16,
            },
          ]
        }
        testID="Text"
      >
        November 13, 2015 8:52 PM
      </Text>
    </View>
  </View>
</View>
`;

exports[`different notification types renders correctly | Prayer Request 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": "#ECEEF2",
      "borderBottomWidth": 1,
      "opacity": 1,
      "paddingVertical": 15,
    }
  }
  testID="notificationButton"
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "maxWidth": 350,
        "paddingHorizontal": 20,
      }
    }
  >
    <Image
      resizeMode="cover"
      source={
        Object {
          "uri": "recusandae alias consequuntur",
        }
      }
      style={
        Array [
          Object {
            "borderRadius": 24,
            "height": 48,
            "width": 48,
          },
          Object {
            "backgroundColor": "rgb(115, 115, 152)",
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Object {
          "left": 50,
          "position": "absolute",
          "top": 30,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 18,
              "flexDirection": "row",
              "height": 36,
              "justifyContent": "space-between",
              "paddingHorizontal": 20,
              "paddingVertical": 10,
            },
            Object {
              "backgroundColor": "#A97398",
            },
            Object {
              "width": 20,
            },
            Object {
              "alignItems": "center",
              "borderRadius": 12,
              "height": 24,
              "justifyContent": "center",
              "paddingHorizontal": 5,
              "paddingVertical": 5,
              "width": 24,
            },
          ]
        }
        testID="PRAYER_REQUESTLabel"
      >
        <SvgMock
          color="#ffffff"
          height={15}
          style={
            Array [
              Object {
                "marginLeft": 0,
                "marginRight": 0,
              },
              undefined,
            ]
          }
          width={15}
        />
      </View>
    </View>
    <View
      style={
        Object {
          "paddingHorizontal": 20,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#505256",
              "fontSize": 16,
              "lineHeight": 20,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "fontWeight": "600",
              },
            ]
          }
        >
          Christian Huffman
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {},
            ]
          }
        >
           posted a new 
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {},
            ]
          }
        >
          prayer request
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {},
            ]
          }
        >
           in 
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "fontWeight": "600",
              },
            ]
          }
        >
          Bleh 2.0
        </Text>
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#B4B6BA",
              "fontSize": 12,
              "lineHeight": 16,
            },
          ]
        }
        testID="Text"
      >
        November 13, 2015 8:52 PM
      </Text>
    </View>
  </View>
</View>
`;

exports[`different notification types renders correctly | Spiritual Question 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": "#ECEEF2",
      "borderBottomWidth": 1,
      "opacity": 1,
      "paddingVertical": 15,
    }
  }
  testID="notificationButton"
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "maxWidth": 350,
        "paddingHorizontal": 20,
      }
    }
  >
    <Image
      resizeMode="cover"
      source={
        Object {
          "uri": "recusandae alias consequuntur",
        }
      }
      style={
        Array [
          Object {
            "borderRadius": 24,
            "height": 48,
            "width": 48,
          },
          Object {
            "backgroundColor": "rgb(115, 115, 152)",
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Object {
          "left": 50,
          "position": "absolute",
          "top": 30,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 18,
              "flexDirection": "row",
              "height": 36,
              "justifyContent": "space-between",
              "paddingHorizontal": 20,
              "paddingVertical": 10,
            },
            Object {
              "backgroundColor": "#FFA178",
            },
            Object {
              "width": 20,
            },
            Object {
              "alignItems": "center",
              "borderRadius": 12,
              "height": 24,
              "justifyContent": "center",
              "paddingHorizontal": 5,
              "paddingVertical": 5,
              "width": 24,
            },
          ]
        }
        testID="QUESTIONLabel"
      >
        <SvgMock
          color="#ffffff"
          height={15}
          style={
            Array [
              Object {
                "marginLeft": 0,
                "marginRight": 0,
              },
              undefined,
            ]
          }
          width={15}
        />
      </View>
    </View>
    <View
      style={
        Object {
          "paddingHorizontal": 20,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#505256",
              "fontSize": 16,
              "lineHeight": 20,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "fontWeight": "600",
              },
            ]
          }
        >
          Christian Huffman
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {},
            ]
          }
        >
           posted a new 
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {},
            ]
          }
        >
          spiritual question
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {},
            ]
          }
        >
           in 
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "fontWeight": "600",
              },
            ]
          }
        >
          Bleh 2.0
        </Text>
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#B4B6BA",
              "fontSize": 12,
              "lineHeight": 16,
            },
          ]
        }
        testID="Text"
      >
        November 13, 2015 8:52 PM
      </Text>
    </View>
  </View>
</View>
`;

exports[`different notification types renders correctly | Thought 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": "#ECEEF2",
      "borderBottomWidth": 1,
      "opacity": 1,
      "paddingVertical": 15,
    }
  }
  testID="notificationButton"
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "maxWidth": 350,
        "paddingHorizontal": 20,
      }
    }
  >
    <Image
      resizeMode="cover"
      source={
        Object {
          "uri": "recusandae alias consequuntur",
        }
      }
      style={
        Array [
          Object {
            "borderRadius": 24,
            "height": 48,
            "width": 48,
          },
          Object {
            "backgroundColor": "rgb(115, 115, 152)",
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Object {
          "left": 50,
          "position": "absolute",
          "top": 30,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 18,
              "flexDirection": "row",
              "height": 36,
              "justifyContent": "space-between",
              "paddingHorizontal": 20,
              "paddingVertical": 10,
            },
            Object {
              "backgroundColor": "#B4B6BA",
            },
            Object {
              "width": 20,
            },
            Object {
              "alignItems": "center",
              "borderRadius": 12,
              "height": 24,
              "justifyContent": "center",
              "paddingHorizontal": 5,
              "paddingVertical": 5,
              "width": 24,
            },
          ]
        }
        testID="THOUGHTLabel"
      >
        <SvgMock
          color="#ffffff"
          height={15}
          style={
            Array [
              Object {
                "marginLeft": 0,
                "marginRight": 0,
              },
              undefined,
            ]
          }
          width={15}
        />
      </View>
    </View>
    <View
      style={
        Object {
          "paddingHorizontal": 20,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#505256",
              "fontSize": 16,
              "lineHeight": 20,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "fontWeight": "600",
              },
            ]
          }
        >
          Christian Huffman
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {},
            ]
          }
        >
           posted a new 
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {},
            ]
          }
        >
          thought
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {},
            ]
          }
        >
           in 
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "fontWeight": "600",
              },
            ]
          }
        >
          Bleh 2.0
        </Text>
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#B4B6BA",
              "fontSize": 12,
              "lineHeight": 16,
            },
          ]
        }
        testID="Text"
      >
        November 13, 2015 8:52 PM
      </Text>
    </View>
  </View>
</View>
`;

exports[`renders correctly 1`] = `
<View
  accessible={true}
  focusable={true}
  isTVSelectable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "backgroundColor": "#ffffff",
      "borderBottomColor": "#ECEEF2",
      "borderBottomWidth": 1,
      "opacity": 1,
      "paddingVertical": 15,
    }
  }
  testID="notificationButton"
>
  <View
    style={
      Object {
        "flex": 1,
        "flexDirection": "row",
        "maxWidth": 350,
        "paddingHorizontal": 20,
      }
    }
  >
    <Image
      resizeMode="cover"
      source={
        Object {
          "uri": "recusandae alias consequuntur",
        }
      }
      style={
        Array [
          Object {
            "borderRadius": 24,
            "height": 48,
            "width": 48,
          },
          Object {
            "backgroundColor": "rgb(115, 115, 152)",
          },
          undefined,
        ]
      }
    />
    <View
      style={
        Object {
          "left": 50,
          "position": "absolute",
          "top": 30,
        }
      }
    >
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "borderRadius": 18,
              "flexDirection": "row",
              "height": 36,
              "justifyContent": "space-between",
              "paddingHorizontal": 20,
              "paddingVertical": 10,
            },
            Object {
              "backgroundColor": "#7076B5",
            },
            Object {
              "width": 20,
            },
            Object {
              "alignItems": "center",
              "borderRadius": 12,
              "height": 24,
              "justifyContent": "center",
              "paddingHorizontal": 5,
              "paddingVertical": 5,
              "width": 24,
            },
          ]
        }
        testID="STORYLabel"
      >
        <SvgMock
          color="#ffffff"
          height={15}
          style={
            Array [
              Object {
                "marginLeft": 0,
                "marginRight": 0,
              },
              undefined,
            ]
          }
          width={15}
        />
      </View>
    </View>
    <View
      style={
        Object {
          "paddingHorizontal": 20,
        }
      }
    >
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#505256",
              "fontSize": 16,
              "lineHeight": 20,
            },
          ]
        }
      >
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {},
            ]
          }
        >
          A new story has been added in 
        </Text>
        <Text
          style={
            Array [
              Object {
                "color": "#505256",
              },
              Object {
                "fontFamily": "SourceSansPro-Regular",
              },
              Object {
                "fontWeight": "600",
              },
            ]
          }
        >
          
        </Text>
      </Text>
      <Text
        style={
          Array [
            Object {
              "color": "#505256",
            },
            Object {
              "fontFamily": "SourceSansPro-Regular",
            },
            Object {
              "color": "#B4B6BA",
              "fontSize": 12,
              "lineHeight": 16,
            },
          ]
        }
        testID="Text"
      >
        November 13, 2015 8:52 PM
      </Text>
    </View>
  </View>
</View>
`;
